createAnswer() SDP Rejected by setLocalDescription() https://bugs.webkit.org/show_bug.cgi?id=195930 <rdar://problem/49030489>

Reviewed by Eric Carlson.

Source/ThirdParty/libwebrtc:

Make sure to check packetization mode parameter when matching H264 video codec.

* Source/webrtc/media/base/codec.cc:
* WebKit/0001-fix-195930.patch: Added.

LayoutTests:

* webrtc/h264-packetization-mode-expected.txt: Added.
* webrtc/h264-packetization-mode.html: Added.


Canonical link: https://commits.webkit.org/212343@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245829 268f45cc-cd09-0410-ab3c-d52691b4dbfc